[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imads-hpo"
version = "0.1.4"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
description = "PyTorch hyperparameter optimization via IMADS (Mesh Adaptive Direct Search)"
dependencies = [
    "imads @ git+https://github.com/Honey-Be/imads.git@v1.0.3#subdirectory=imads-py",
    "torch>=2.0",
    "safetensors",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/imads_hpo"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu", marker = "extra == 'cpu' and extra != 'cu126' and extra != 'cu128' and extra != 'cu130'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "extra != 'cpu' and extra == 'cu126' and extra != 'cu128' and extra != 'cu130'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "extra != 'cpu' and extra != 'cu126' and extra == 'cu128' and extra != 'cu130'" },
    { index = "pytorch-cu130", extra = "cu130", marker = "extra != 'cpu' and extra != 'cu126' and extra != 'cu128' and extra == 'cu130'" }
]
imads = { git = "https://github.com/Honey-Be/imads.git", tag = "v1.0.3", subdirectory = "imads-py" }
