[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imads-hpo"
version = "1.0.0"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
description = "PyTorch hyperparameter optimization via IMADS (Mesh Adaptive Direct Search)"
dependencies = [
    "imads @ git+https://github.com/Honey-Be/imads.git@v2.0.0#subdirectory=imads-py",
    "torch>=2.0",
    "numpy",
    "safetensors",
]

[project.optional-dependencies]
cpu = ["torch"]
cu126 = ["torch"]
cu128 = ["torch"]
cu130 = ["torch"]
dev = ["pytest>=8.0"]
wandb = ["wandb>=0.15"]
mlflow = ["mlflow>=2.0"]
tensorboard = ["tensorboardX>=2.6"]
all = ["wandb>=0.15", "mlflow>=2.0", "tensorboardX>=2.6"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/imads_hpo"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu", marker = "extra == 'cpu' and extra != 'cu126' and extra != 'cu128' and extra != 'cu130'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "extra != 'cpu' and extra == 'cu126' and extra != 'cu128' and extra != 'cu130'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "extra != 'cpu' and extra != 'cu126' and extra == 'cu128' and extra != 'cu130'" },
    { index = "pytorch-cu130", extra = "cu130", marker = "extra != 'cpu' and extra != 'cu126' and extra != 'cu128' and extra == 'cu130'" }
]
imads = { git = "https://github.com/Honey-Be/imads.git", tag = "v2.0.0", subdirectory = "imads-py" }
